<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sara.rehabilitation_tool.Drink">

    <Button
        android:id="@+id/milk"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/milk1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/water"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/water2"
        app:layout_constraintStart_toEndOf="@+id/milk"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/juice"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/juice"
        app:layout_constraintStart_toEndOf="@+id/water"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/milk"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milk" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/water"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/water" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:text="@string/juice"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/juice" />
</android.support.constraint.ConstraintLayout>
